--- a/Breakout/index.html
+++ b/Breakout/index.html
@@ -4,37 +4,9 @@
     <meta charset="UTF-8">
     <title>Breakout</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/scripts.js" defer></script>
 </head>
 <body>
-<audio id="bg-music" class="button" loop>
-    <source src="music/secret.mp3" type="audio/mp3">
-</audio>
-
-<div class="container">
-    <div class="column side-column" id="column-1">
-        <div class="title">
-            <h2>Menu</h2>
-        </div>
-        <button id="play-pause-button">Play</button>
-    </div>
-    <div class="column center-column" id="column-2">
-        <div class="title">
-            <h2>Breakout</h2>
-        </div>
-        <div class="game-screen" id="game">
-        </div>
-    </div>
-    <div class="column side-column" id="column-3">
-        <div class="title">
-            <h2>Stats</h2>
-        </div>
-        <div id="score">
-            <strong>Score: </strong>
-        </div>
-    </div>
-</div>
-
-
+<div class="game-screen" id="game"></div>
+<script src="js/scripts.js" type="module" defer></script>
 </body>
 </html>
